Improving test and methods of MyLinkedList